--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -1,3 +1,17 @@
 *{
 	font-family: "Fira Code","Smartisan Compact CNS";
 }
+
+div.cell.selected:before{
+	border-radius: 5px;
+	background: #ff5353;
+}
+div.cell.selected{
+	background: rgba(0, 0, 0, 0.1);
+}
+
+.cell{
+	border-radius: 5px;
+}
+.cell:hover{
+}
